# ffgpu-oglapps

./: CMakeLists.txt  README.md
src/geo/: GL_Compat_Triangle_0000.c  GL_Compat_Triangle_0001.c  GL_Compat_Triangle_0002.c
src/models/: venus.c
